
; (include_subdirs unqualified)

(library
 (public_name ppx_interact)
 (kind ppx_rewriter)
;  (libraries ppxlib)
 (libraries ppxlib)
;  compiler-libs.toplevel unix)
;  (library_flags -linkall)

;  (foreign_stubs (language c) (names linenoise_src linenoise_stubs))

 (preprocess
  (pps ppxlib.metaquot)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
