(library
 (name ppx_interact_runtime)
 (public_name ppx_interact.runtime)
 (libraries compiler-libs.toplevel unix linenoise))

(env
 (dev
  (flags
   (:standard -warn-error -A))))

(rule
 (targets unstable.ml)
 (deps    unstable.cppo.ml)
 (action  (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets})))